# libsmartereye2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: common_config.cmake  external_libusb.cmake  libusb_config.cmake  options.cmake  version_config.cmake
docs/: README.md  api.md  build.md  qa.md
docs/design/: high-level-api.plantuml  platform.plantuml
examples/: CMakeLists.txt
examples/hello_smartereye/: CMakeLists.txt  hello_smartereye.cc
include/: CMakeLists.txt
include/smartereye2/: se_callbacks.hpp  se_global.hpp  se_types.hpp  se_util.hpp
include/smartereye2/alg/: algorithmresult.h  opense_basic_type.h  opense_camera.h  opense_vehicle.h  packed_types.h
include/smartereye2/core/: core_types.hpp  frame.hpp  frame_queue.hpp  frame_set.hpp  options.hpp
include/smartereye2/device/: calibrated_device.hpp  context.hpp  device.hpp  device_hub.hpp  device_list.hpp  device_types.hpp  record_playback.hpp  update_device.hpp
include/smartereye2/pipeline/: pipeline.hpp  pipeline_config.hpp  pipeline_profile.hpp
include/smartereye2/proc/: filter.hpp  processing.hpp
include/smartereye2/sensor/: notification.hpp  sensor.hpp  sensor_types.hpp
include/smartereye2/streaming/: stream_profile.hpp  stream_types.hpp
src/: CMakeLists.txt  consumer_queue.h  se_callbacks.h  se_common.cc  se_common.h  se_types.h  se_util.h
src/concurrency/: CMakeLists.txt  concurrency.h  consumer_queue.h  dispatcher.cc  dispatcher.h  watchdog.h
src/core/: CMakeLists.txt  disparity_frame.h  frame.cc  frame.h  frame_aggregator.cc  frame_aggregator.h  frame_archive.h  frame_data.cc  frame_data.h  frame_extension.h  frame_interface.cc  frame_interface.h  frame_queue.cc  frame_queue.h  frame_set.cc  frame_set.h  frame_source.cc  frame_source.h  info.h  metadata_parser.cc  metadata_parser.h  options.cc  options.h  stream_profile.cc  stream_profile.h  streaming.cc  streaming.h
src/device/: CMakeLists.txt  backend.cc  backend.h  calibrated_device.cc  calibrated_device.h  context.cc  context.h  device.cc  device.h  device_hub.cc  device_hub.h  device_info.h  device_list.h  event_infomation.h  motion.cc  motion.h  record_playback.cc  record_playback.h  sensor.cc  sensor.h  update_device.cc  update_device.h
src/gemini/: CMakeLists.txt  gemini_device.cc  gemini_device.h  gemini_info.cc  gemini_info.h  gemini_sensor.cc  gemini_sensor.h  gemini_serial_port.cc  gemini_serial_port.h  tlv_data.h
src/mock/: CMakeLists.txt
src/mock/playback/: playback.cc  playback.h  playback_device.cc  playback_device.h  playback_sensor.cc  playback_sensor.h
src/mock/record/: record.cc  record.h  record_device.cc  record_device.h  record_sensor.cc  record_sensor.h
src/net/: CMakeLists.txt
src/net/satp/: CMakeLists.txt  blockhandler.h  protocolunit.h  tcp_protocol.cc  tcp_protocol.h
src/net/uv-cpp/: CMakeLists.txt  async.cc  async.h
src/pipeline/: CMakeLists.txt  config.cc  config.h  pipeline.cc  pipeline.h  pipeline_config.cc  pipeline_config.h  pipeline_profile.cc  pipeline_profile.h
src/proc/: CMakeLists.txt  filter.cc  filter.h  processing.cc  processing.h  syncer_process.cc  syncer_process.h  synthetic_stream.cc  synthetic_stream.h
src/sensor/: CMakeLists.txt  notification.cc  notification.h  sensor.cc  sensor.h
src/streaming/: CMakeLists.txt  serialization.h  stream_profile.cc  stream_profile.h  streaming.cc  streaming.h
src/usb/: CMakeLists.txt  command_transfer.h  usb_context.cc  usb_context.h  usb_device.cc  usb_device.h  usb_endpoint.h  usb_enumerator.cc  usb_enumerator.h  usb_foo.cc  usb_foo.h  usb_handle.cc  usb_handle.h  usb_interface.cc  usb_interface.h  usb_messenger.cc  usb_messenger.h  usb_request.cc  usb_request.h  usb_types.h
